--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "next-app",
-  "version": "0.1.0",
+  "name": "15-Covid19-Info-with-NextJS",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@next/font": "13.0.7",
-    "next": "13.0.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "bootstrap": "^5.2.2",
+    "chart.js": "^3.9.1",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^3.0.0",
+    "next": "^13.0.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.2.0",
+    "react-number-format": "^5.1.1"
   }
 }
