--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "15-Covid19-Info-with-NextJS",
+  "name": "covid19_info_with_nextjs",
   "version": "1.0.0",
-  "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
