--- a/config.json
+++ b/config.json
@@ -2,10 +2,9 @@
     "app": {
         "version": "1.0"
     },
-    "data-covid19": {
+    "local-api": {
         "base_url": "https://data.covid19.go.id/public/api",
-        "indonesia": "/indonesia",
-        "provinsi": "provinsi"
+        "provinsi": "/prov.json"
     },
     "global-api": {
         "base_url": "https://api.covid19api.com",
